# audioTransfer

./: .gitignore  README.md  go.mod  pyproject.toml
audiobook_transfer/: __init__.py  cli.py  matcher.py  metadata.py  models.py  organizer.py  parser.py  scanner.py  transfer.py  utils.py
cmd/audiotransfer/: main.go
pkg/metadata/: metadata.go
pkg/models/: models.go
pkg/organizer/: organizer.go
pkg/parser/: parser.go
pkg/scanner/: scanner.go
pkg/transfer/: transfer.go
pkg/utils/: utils.go
